                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)

 - 22-03-2006 fixed: dvdplayer: some dvds used the wrong subtitle colors that resulted in funny subtitles. Thx to frov for sending me a dvd that had this problem
                     some subtitles still have color issues when selecting only the .vob file to play
 - 22-03-2006 fixed: dvdplayer: changed the way the number of subtitles and audiostreams are found.
                     hopefully it will fix a lot of audio / subtitle issues in the osd (unknown streams and such)
 - 22-03-2006 added: dvdplayer: some debugging utilities
 - 22-03-2006 fixed: bug in dll loader caused some dlls (not the ones in cvs) to crash when loading them
 - 22-03-2006 fixed: dvdplayer: libfaad sync issues (resulted in a crash for some streams)
 - 22-03-2006 fixed: [ 1453519 ] OSD Not Visible Video Overscan Setup
 - 22-03-2006 fixed: Smart playlists didn't support ordering + limiting.
 - 22-03-2006 fixed: Hebrew GUI text was not flipped.
 - 22-03-2006 removed: Support for skins with versions < 2.0
 - 21-03-2006 fixed: browse for subtitle now starts in movie directory.
 - 21-03-2006 fixed: subtitles in subdirs on dvds.
 - 21-03-2006 fixed: Starting another last.fm station if crossfading enabled stopped playing (crossfading for last.fm stations disabled now).
 - 21-03-2006 fixed: Pap's queuing of next file conflicted with last.fm streaming.
 - 21-03-2006 fixed: FileCurl ignored timeout settings and always used 0.5 seconds.
 - 21-03-2006 fixed: volumebar and seekbar would speed a short while after changing songs
 - 21-03-2006 fixed: trainers for games on dvd.